Added correct resourses

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>My Personal Portfolio</title>
         <meta charset="utf-8">
         <meta name  = "viewport" content="width=device-width initial-scale = 1">
-        <link rel="stylesheet" href="/myportfolio.css">
+        <link rel="stylesheet" href="./myportfolio.css">
     </head>
     <body>
        <header>
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#aboutme">About Me</a></li>
-                <li><a href="/resources/Murty Banking CV.pdf">Resume</a></li>
+                <li><a href="./resources/Murty Banking CV.pdf">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="myportfolio_contactme.html">Contact</a></li>
@@ -37,17 +37,17 @@
             </div>
             <div class="projectdetails">
                 <div>
-                    <img src="/resources/css/images/form-a-story-codecademy.png" alt="Form A Story Logo"><br>
+                    <img src="./resources/css/images/form-a-story-codecademy.png" alt="Form A Story Logo"><br>
                     <a id="github-formastory" href="#">github-repository</a><br>
                     <a id="formastory-page" href="#">page-link</a>
                 </div>
                 <div>
-                    <img src="/resources/css/images/piano-keys codecademy.png" alt="pianokeys image"><br>
+                    <img src="./resources/css/images/piano-keys codecademy.png" alt="pianokeys image"><br>
                     <a id="github-pianokeys" href="https://github.com/Narasimhamurty456/piano_keys">github-repository</a><br>
                     <a id="pianokeys-page" href="#">page-link</a>
                 </div>
                 <div>
-                    <img src="/resources/css/ballbadminton/background.jfif" alt="ballbadminton logo"><br>
+                    <img src="./resources/css/ballbadminton/background.jfif" alt="ballbadminton logo"><br>
                     <a id="github-ballbadminton" href="#">github-repository</a><br>
                     <a id="ballbadminton-page" href="#">page-link</a>
                 </div>
@@ -57,23 +57,23 @@
             <h2>Skills</h2>
             <div class="skillsdetails">
                 <div>
-                    <img src="/resources/css/images/html image.svg" alt="html logo">
+                    <img src="./resources/css/images/html image.svg" alt="html logo">
                     <h3>HTML</h3>
                 </div>
                 <div>
-                    <img src="/resources/css/images/css image.svg" alt="css logo">
+                    <img src="./resources/css/images/css image.svg" alt="css logo">
                     <h3>CSS</h3>
                 </div>
                 <div>
-                    <img src="/resources/css/images/javascript image.svg" alt="javascript logo">
+                    <img src="./resources/css/images/javascript image.svg" alt="javascript logo">
                     <h3>JAVASCRIPT</h3>
                 </div>
                 <div>
-                    <img src="/resources/css/images/python image.svg" alt="python logo">
+                    <img src="./resources/css/images/python image.svg" alt="python logo">
                     <h3>PYTHON</h3>
                 </div>
                 <div>
-                    <img src="/resources/css/images/git image.svg" alt="git logo">
+                    <img src="./resources/css/images/git image.svg" alt="git logo">
                     <h3>GIT</h3>
                 </div>
             </div>
@@ -86,6 +86,6 @@
 
          </div>
        </footer>
-       <script src="/myportfolio.js"></script>
+       <script src="./myportfolio.js"></script>
     </body>
 </html>
