--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#aboutme">About Me</a></li>
-                <li><a href="./resources/Murty Banking CV.pdf">Resume</a></li>
+                <li><a href="./resources/VCNMurthyBankingCV.docx" target="_blank">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="myportfolio_contactme.html">Contact</a></li>
@@ -47,7 +47,7 @@
                     <a id="pianokeys-page" href="#">page-link</a>
                 </div>
                 <div>
-                    <img src="./resources/css/ballbadminton/background.jfif" alt="ballbadminton logo"><br>
+                    <img src="./resources/css/images/background.jpg" alt="ballbadminton logo"><br>
                     <a id="github-ballbadminton" href="#">github-repository</a><br>
                     <a id="ballbadminton-page" href="#">page-link</a>
                 </div>
