Image links updated

--- a/myportfolio_contactme.html
+++ b/myportfolio_contactme.html
@@ -30,20 +30,21 @@
     </head>
     <body>
         <header>
-            <nav><a href="myportfolio.html">Home</a></nav>
+            <nav><a href="./index.html">Home</a></nav>
             <h1>Contact Me</h1>
             
         </header>
         <main>
             <h4>Have an interesting project? I would love to hear about it!</h4>
             <section>
-                <form action="/myportfolio.html" method="post">
+                <form action="./index.html" method="post">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" value="Enter Your Name"><br><br>
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" value="Enter Your Email"><br><br>
                     <label for="message">Message:</label><br>
-                    <textarea name="textarea" id="message" cols="30" rows="10" value="Enter Your Message or Query"></textarea>
+                    <textarea name="textarea" id="message" cols="30" rows="10" value="Enter Your Message or Query"></textarea><br>
+                    <button name="submit" value="submit">Submit</button>
                 </form>
             </section>
             <ul id="social-media">
