--- a/myportfolio_contactme.html
+++ b/myportfolio_contactme.html
@@ -48,10 +48,10 @@
                 </form>
             </section>
             <ul id="social-media">
-                <li><a href="https://www.linkedin.com/in/vcnmurthyposina/"><img src="/resources/css/images/linkedin logo.png" alt="linkedin logo"></a></li>
-                <li><a href="#"><img src="/resources/css/images/facebook logo.png" alt="facebook logo"></a></li>
-                <li><a href="#"><img src="/resources/css/images/twitter logo.png" alt="twitter logo"></a></li>
-                <li><a href="#"><img src="/resources/css/images/gmail logo.png" alt="gmail logo"></a></li>
+                <li><a href="https://www.linkedin.com/in/vcnmurthyposina/"><img src="./resources/css/images/linkedin logo.png" alt="linkedin logo"></a></li>
+                <li><a href="#"><img src="./resources/css/images/facebook logo.png" alt="facebook logo"></a></li>
+                <li><a href="#"><img src="./resources/css/images/twitter logo.png" alt="twitter logo"></a></li>
+                <li><a href="#"><img src="./resources/css/images/gmail logo.png" alt="gmail logo"></a></li>
             </ul>
             
         </main>
